--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "express": "^4.17.1",
+    "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.1.1",
     "helmet": "^3.21.3",
+    "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.2",
     "morgan": "^1.9.1",
@@ -31,6 +33,7 @@
     "nodemailer": "^6.4.3",
     "prettier": "^1.19.1",
     "slugify": "^1.3.6",
-    "validator": "^12.2.0"
+    "validator": "^12.2.0",
+    "xss-clean": "^0.1.1"
   }
 }
